# airunner

./: .coverage  .coveragerc  .dockerignore  .env  .env.docker.example  .gitignore  .pre-commit-config.yaml  .roomodes  BuildProcess.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CRITICAL_FIXES.md  Dockerfile  Dockerfile.dev  Dockerfile.headless  END_USER_DISTRIBUTION.md  FEATURE_ROADMAP.md  HYBRID_RUNTIME_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_ANALYSIS.md  LICENSE  LIVE_STROKE_SYNC_PLAN.md  LLM_MODEL_MANAGER_REFACTORING_SUMMARY.md  MANIFEST.in  MECAB_WINDOWS_SETUP.md  MULTI_MONITOR_FIXES.md  OVERVIEW.md  RAG_FAISS_MIGRATION_GUIDE.md  RAG_IMPLEMENTATION_PLAN.md  RAG_MANUAL_SELECTION.md  RAG_MULTI_INDEX_RETRIEVAL_FIX.md  RAG_PERFORMANCE_OPTIMIZATION.md  RAG_PER_DOCUMENT_ARCHITECTURE.md  RAG_PER_DOCUMENT_IMPLEMENTATION_COMPLETE.md  RAG_SOLUTION_SUMMARY.md  RAG_TWO_PHASE_RETRIEVAL_OPTIMIZATION.md  (+68 more)
.github/: FUNDING.yml  codeql-config.yml  copilot-instructions.md
.pc/: applied-patches
.roo/: mcp.json
airunner_web_client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: README.md  package_metadata.py  setup.py
client/: README.md  index.html  package-lock.json  package.json  vite-plugin-extensions.ts  vite.config.ts
containers/: airunner.Dockerfile  build.sh  run.sh  run_with_rocker.sh
debian/: changelog  control  postinst  rules
deployment/: install_distributed.sh
docker/: Dockerfile  README.md  builder.Dockerfile  deps.Dockerfile  entrypoint.sh
docs/: LANGGRAPH_GUIDE.md  agent-eval-tests.md  coding_agent_workspace_operator_guide.md  deliverable_workflows.md  document-rag-flow.md  hybrid-runtime-target.md  llm-flow.md  mkdocs.yml  services-complexity-workflow.md
electron/: main.js  package-lock.json  package.json  preload.js
examples/: batch_processing_example.py  flux_example.py  langgraph_rag_workflow.py  langgraph_simple_workflow.py
flatpak/: README.md  build.sh  com.capsizegames.AIRunner.desktop  com.capsizegames.AIRunner.metainfo.xml  com.capsizegames.AIRunner.yml
model/: README.md  package_metadata.py  setup.py
native/: README.md  package_metadata.py  setup.py
native/airunner_launcher/: CMakeLists.txt  CONTRACT.md  README.md  runtime_manifest.example.env
native/airunner_launcher/src/: main.cpp
package/: .dockerignore  Dockerfile  Dockerfile-dev  Dockerfile.builder  Dockerfile.dev  Dockerfile.linux_build_dev_runtime  Dockerfile.linux_build_runtime  build.sh  (+19 more)
(+7109 files in other folders)
